[package]
name = "css-typing-gen"
description = "CSS Typing animation generator"
version = "0.2.4"
edition = "2021"
repository = "https://github.com/BatteredBunny/css-typing-gen"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
wasm-bindgen = { version = "0.2.93" }
gloo = "0.11.0"
chrono = "0.4.38"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.70"

[dependencies.web-sys]
version = "0.3.70"
features = [
  'Document',
  'Element',
  'Event',
  'EventTarget',
  'HtmlInputElement',
  'HtmlButtonElement',
  'HtmlStyleElement',
  'HtmlDivElement',
]
