[package]
name = "css-typing-gen"
description = "CSS Typing animation generator"
version = "0.2.5"
edition = "2024"
repository = "https://github.com/BatteredBunny/css-typing-gen"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
wasm-bindgen = { version = "0.2.104" }
gloo = "0.11.0"
chrono = "0.4.42"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.81"

[dependencies.web-sys]
version = "0.3.81"
features = [
  'Document',
  'Element',
  'Event',
  'EventTarget',
  'HtmlInputElement',
  'HtmlButtonElement',
  'HtmlStyleElement',
  'HtmlDivElement',
]
